tests/invalid/duplicate-define.coil
' @test invalid
' @error preparation
' @rule duplicate-define
' @covers DEFINE
' @description DEFINE with the same name twice is a preparation error

DEFINE counter
0
END

DEFINE counter
1
END
